--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -69,13 +69,14 @@ basicCC + geom_bar(stat="identity", position = "dodge")
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
-
-
-
 ## Now with More data
 
-
-
+```{r}
+table2 <- xtabs(~race + cappun, data=mydata)
+rowPerc(table2)
+colPerc(table2)
+```
+The Numerical Result Data shows white is 65% in favor to 35% oppose, other is 55% in favor to oppose whereas black 43% in favor to 57% in oppose of capital punishment.  
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
